# VANTAGE

./: README.md  REDTEAM_ANALYSIS.md  knowledge_base.json  main.py  pyproject.toml  requirements.txt  vantage.py
api/: main.py
api/static/: app.js  index.html  styles.css
tests/: test_api.py
